--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Johnny Jiang</title>
 
-    <!--Image Icon-->
+    <!--Image Icon, JJ-->
     <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 
@@ -24,6 +24,43 @@
 
 </head>
 <body>
-    
+    <!--Navbar Section-->
+    <div id="top"></div>
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark" style="background-color: #131313;">
+        <div class="container-fluid">
+          <a class="navbar-brand nav-link" onclick="jump('top')"><i class="fa-solid fa-fire-flame-curved"></i>JOHNNY JIANG</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-2 align-items-end">
+              <li class="nav-item active">
+                <a class="nav-link" onclick="jump('about')" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" onclick ="jump('price')" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">Experience</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" onclick ="jump('package')" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">Projects</a>
+              </li>
+              <li class="nav-item">
+                <a  class="nav-link" onclick ="jump('gallery')" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">Gallery</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+    <!--Landing Section-->
+    <!--About Section-->
+    <!--Interests Section-->
+    <!--Exprience Section-->
+    <!--Projects Section-->
+    <!--Contact Section-->
+    <!--Footer Section-->
 </body>
+    <script src="assets/js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" 
+    crossorigin="anonymous"></script>
 </html>
