--- a/index.html
+++ b/index.html
@@ -59,7 +59,35 @@
         <div class="container">
             <div class="row text-center align-items-center">
                 <div class="col">
-
+                    <h1><strong>ABOUT ME</strong></h1>
+                </div>
+                <div class="container">
+                    <div class="row text-center align-items-center">
+                        <div class="col-xs-12 col-lg-6">
+                            <img class="w-100" src="images/about.jpg" alt="">
+                        </div>
+                        <div class="col-xs-12 col-lg-6">
+                            <p>Hello there! I'm Johnny and I am XYZ. I love XYZ. Here's a little about me:</p>
+                            <p>
+                                <strong>Abilities:</strong>
+                                <br>- Eat countless packets of Mi Goreng instant noodles
+                                <br>- XYZ
+                                <br>- Speedrun any task with Mario Kart Star Music 10 Hrs in the background
+                            </p>
+                            <p>
+                                <strong>Achievements</strong>
+                                <br>- Survived two separate graduations in pouring rain
+                                <br>- Crowned the Four Square King in elementary school
+                                <br>- XYZ
+                            </p>
+                            <p>
+                                <strong>Mischiefs:</strong>
+                                <br>- Says "I can't find you" when I actually just arrived
+                                <br>- XYZ
+                                <br>- XYZ
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -71,8 +99,44 @@
         <div class="container">
             <div class="row text-center align-items-center">
                 <div class="col">
-                    
+                    <h1><strong>CORE PRINCIPLES</strong></h1>
                 </div>
+            </div>
+            <div class="row text-center align-items-center">
+                <div class="col-xs-12 col-sm-6">
+                    <p>
+                        <strong>Innovate</strong>
+                        <br>Innovation is my driving force. 
+                        I am dedicated to pushing boundaries and 
+                        finding inventive solutions to challenges. 
+                        I view every problem as a chance to craft something groundbreaking.
+                    </p>
+                    </div>
+                    <div class="col-xs-12 col-sm-6">
+                    <p>
+                        <strong>Challenge</strong>
+                        <br>I am a passionate advocate for pushing my limits. 
+                        Challenges invigorate me and fuel my desire to conquer new heights. 
+                        I believe that the greatest growth comes from overcoming obstacles.
+                    </p>
+                    </div>
+                    <div class="col-xs-12 col-sm-6">
+                    <p>
+                        <strong>Collaborate</strong>
+                        <br>Collaboration is at the heart of my approach. 
+                        I embrace the chance to team up with diverse minds, 
+                        merging our ideas to create something greater than ourselves.
+                    </p>
+                    </div>
+                    <div class="col-xs-12 col-sm-6">
+                    <p>
+                        <strong>Impact</strong>
+                        <br>Impact is my ultimate goal. 
+                        I channel my efforts into projects 
+                        that create meaningful change and 
+                        leave a positive mark on the world around me.
+                    </p>
+                    </div>
             </div>
         </div>
     </section>
@@ -95,7 +159,46 @@
         <div class="container">
             <div class="row text-center align-items-center">
                 <div class="col">
-                    
+                    <h1><strong>PERSONAL PROJECTS</strong></h1>
+                </div>
+                <div class="container">
+                    <div class="row text-center align-items-center">
+                        <div class="col-xs-12 col-lg-6">
+                            <img class="w-100" src="images/newgarden.jpg" alt="">
+                        </div>
+                        <div class="col-xs-12 col-lg-6">
+                            <div class="title">New Garden</div>
+                            <div class="techstack">Java</div>
+                            <div class="project">Description</div>
+                            <div class="button">GitHub</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row text-center align-items-center">
+                        <div class="col-xs-12 col-lg-6">
+                            <img class="w-100" src="images/lootcouncil.jpg" alt="">
+                        </div>
+                        <div class="col-xs-12 col-lg-6">
+                            <div class="title">Loot Council</div>
+                            <div class="techstack">Python</div>
+                            <div class="project">Description</div>
+                            <div class="button">GitHub</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row text-center align-items-center">
+                        <div class="col-xs-12 col-lg-6">
+                            <img class="w-100" src="images/romantichut.jpg" alt="">
+                        </div>
+                        <div class="col-xs-12 col-lg-6">
+                            <div class="title">Romantic Hut</div>
+                            <div class="techstack">HTML / CSS</div>
+                            <div class="project">Description</div>
+                            <div class="button">GitHub</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -122,7 +225,7 @@
             </div>
           </div>
         </div>
-      </footer>
+    </footer>
 
 </body>
     <script src="assets/js/app.js"></script>
