--- a/index.html
+++ b/index.html
@@ -67,24 +67,26 @@
                             <img class="w-100" src="images/about.jpg" alt="">
                         </div>
                         <div class="col-xs-12 col-lg-6">
-                            <p>Hello there! I'm Johnny and I am XYZ. I love XYZ. Here's a little about me:</p>
+                            <p>Hello there! I'm Johnny and I tend to find myself in interesting situations. 
+                                I love going on adventures and creating stories that spark laughter. 
+                                Here's a little about me:</p>
                             <p>
-                                <strong>Abilities:</strong>
+                                <strong>Capabilities:</strong>
                                 <br>- Eat countless packets of Mi Goreng instant noodles
-                                <br>- XYZ
-                                <br>- Speedrun any task with Mario Kart Star Music 10 Hrs in the background
+                                <br>- Use the Force to open automatic doors for people
+                                <br>- Speedrun any task with Mario Kart Star Music 10 Hrs
                             </p>
                             <p>
-                                <strong>Achievements</strong>
+                                <strong>Accomplishments:</strong>
                                 <br>- Survived two separate graduations in pouring rain
                                 <br>- Crowned the Four Square King in elementary school
-                                <br>- XYZ
+                                <br>- Witnessed Cap lift Mjolnir in a movie theater
                             </p>
                             <p>
-                                <strong>Mischiefs:</strong>
+                                <strong>Misdemeanors:</strong>
                                 <br>- Says "I can't find you" when I actually just arrived
-                                <br>- XYZ
-                                <br>- XYZ
+                                <br>- Doesn't know one single fact about bears attacks
+                                <br>- Has a confusing one-word, all-lowercase WiFi password
                             </p>
                         </div>
                     </div>
@@ -99,7 +101,7 @@
         <div class="container">
             <div class="row text-center align-items-center">
                 <div class="col">
-                    <h1><strong>CORE PRINCIPLES</strong></h1>
+                    <h1><strong>MY VALUES</strong></h1>
                 </div>
             </div>
             <div class="row text-center align-items-center">
@@ -136,7 +138,7 @@
                         that create meaningful change and 
                         leave a positive mark on the world around me.
                     </p>
-                    </div>
+                </div>
             </div>
         </div>
     </section>
