--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id="top"></div>
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark" style="background-color: #131313;">
         <div class="container-fluid">
-          <a class="navbar-brand nav-link" onclick="jump('top')"><i class="fa-solid fa-fire-flame-curved"></i>JOHNNY JIANG</a>
+          <a class="navbar-brand nav-link" onclick="jump('top')">JOHNNY JIANG</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -52,6 +52,23 @@
       </nav>
 
     <!--Landing Section-->
+    <section class="main">
+        <div class="container d-flex flex-column align-items-center justify-content-center h-100">
+            <div class="row text-center align-items-center">
+                <div class="col">
+                    <h1>JOHNNY JIANG</h1>
+                </div>
+            </div>
+            <div class="row text-center align-items-center">
+                <div class="col">
+
+                </div>
+            </div>
+        </div>
+        <div class="arrow bounce">
+            <a onclick="jump('about')"><i class="fa-solid fa-angles-down"></i></a>
+        </div>
+    </section>
     
     <!--About Section-->
     <section class="white">
@@ -69,12 +86,12 @@
                         <div class="col-xs-12 col-lg-8">
                             <p><strong>Hello there!</strong> 
                                 I'm Johnny and I tend to find myself in interesting situations. 
-                                I love going on adventures and creating stories that spark laughter. 
+                                I love going on adventures and creating stories. 
                                 Here's a little about me:</p>
                             <p>
                                 <strong>Capabilities:</strong>
                                 <br>- Eat countless packets of Mi Goreng instant noodles
-                                <br>- Use the Force to open automatic doors for people
+                                <br>- Speak broken Mandarin and Fuzhouneze to my family
                                 <br>- Speedrun any task with Mario Kart Star Music 10 Hrs
                             </p>
                             <p>
@@ -87,6 +104,7 @@
                                 <strong>Misdemeanors:</strong>
                                 <br>- Says "I can't find you" when I actually just arrived
                                 <br>- Doesn't know one single fact about bears attacks
+                                <br>- Ate all the orange slices in my HS basketball team
                                 <br>- Has a confusing one-word, all-lowercase WiFi password
                             </p>
                         </div>
@@ -98,7 +116,6 @@
 
     <!--Interests Section-->
     <section class="grey">
-        <div id="experience" class="anchors"></div>
         <div class="container">
             <div class="row text-center align-items-center">
                 <div class="col">
@@ -151,7 +168,10 @@
             <div class="row text-center align-items-center">
                 <div class="col">
                     <h1><strong>EXPERIENCE</strong></h1>
-                    <p>Description</p>
+                    <p>I've gained experience within established corporations 
+                        and led multiple teams on various academic projects. 
+                        These opportunities have given me a well-rounded perspective 
+                        on addressing complex problems using data-driven techniques.</p>
                 </div>
             </div>
         </div>
@@ -272,6 +292,7 @@
 
 </body>
     <script src="assets/js/app.js"></script>
+    <script src="https://kit.fontawesome.com/a8eb5cb089.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" 
     crossorigin="anonymous"></script>
