--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id="top"></div>
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark" style="background-color: #131313;">
         <div class="container-fluid">
-          <a class="navbar-brand nav-link" onclick="jump('top')">JOHNNY JIANG</a>
+          <a class="navbar-brand nav-link" onclick="toggleNavbar('top')">JOHNNY JIANG</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -56,12 +56,19 @@
         <div class="container d-flex flex-column align-items-center justify-content-center h-100">
             <div class="row text-center align-items-center">
                 <div class="col">
-                    <h1>JOHNNY JIANG</h1>
+                    <h1>Johnny Jiang</h1>
                 </div>
             </div>
             <div class="row text-center align-items-center">
-                <div class="col">
-
+                <div class="col social-icons">
+                    <a href="https://www.linkedin.com/in/johnnyj2608" target="_blank" title="LinkedIn Profile" class="icon-button linkedin">
+                        <i class="icon-linkedin fa fa-linkedin"></i>
+                        <span></span>
+                    </a>
+                    <a href="https://github.com/johnnyj2608" target="_blank" title="GitHub Profile" class="icon-button github">
+                        <i class="icon-github fa fa-github"></i>
+                        <span></span>
+                    </a>
                 </div>
             </div>
         </div>
@@ -174,6 +181,7 @@
                         on addressing complex problems using data-driven techniques.</p>
                 </div>
             </div>
+            <!--New Garden: Assistant (to the) Manager-->
         </div>
     </section>
 
