navbar button hover & title

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <div class="row text-center align-items-center">
                 <div class="col">
                     <h1>Johnny Jiang</h1>
+                    <h2>Software Engineer</h2>
                 </div>
             </div>
             <div class="row text-center align-items-center">
