--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Johnny Jiang</title>
+    <project-title>Johnny Jiang</project-title>
 
     <!--Image Icon, JJ-->
     <link rel="stylesheet" href="assets/css/styles.css" />
@@ -62,11 +62,11 @@
             </div>
             <div class="row text-center align-items-center">
                 <div class="col social-icons">
-                    <a href="https://www.linkedin.com/in/johnnyj2608" target="_blank" title="LinkedIn Profile" class="icon-button linkedin">
+                    <a href="https://www.linkedin.com/in/johnnyj2608" target="_blank" project-title="LinkedIn Profile" class="icon-button linkedin">
                         <i class="icon-linkedin fa fa-linkedin"></i>
                         <span></span>
                     </a>
-                    <a href="https://github.com/johnnyj2608" target="_blank" title="GitHub Profile" class="icon-button github">
+                    <a href="https://github.com/johnnyj2608" target="_blank" project-title="GitHub Profile" class="icon-button github">
                         <i class="icon-github fa fa-github"></i>
                         <span></span>
                     </a>
@@ -84,7 +84,8 @@
         <div class="container">
             <div class="row text-center align-items-center">
                 <div class="col">
-                    <h1><strong>ABOUT</strong></h1>
+                    <h3 class="section-title">About</h3>
+                    <div class="section-title-border"></div>
                 </div>
                 <div class="container">
                     <div class="row text-left align-items-center">
@@ -127,7 +128,8 @@
         <div class="container">
             <div class="row text-center align-items-center">
                 <div class="col">
-                    <h1><strong>CORE VALUES</strong></h1>
+                    <h3 class="section-title">Values</h3>
+                    <div class="section-title-border"></div>
                 </div>
             </div>
             <div class="row text-center align-items-center">
@@ -175,7 +177,8 @@
         <div class="container">
             <div class="row text-center align-items-center">
                 <div class="col">
-                    <h1><strong>EXPERIENCE</strong></h1>
+                    <h3 class="section-title">Experience</h3>
+                    <div class="section-title-border"></div>
                     <p>I've gained experience within established corporations 
                         and led multiple teams on various academic projects. 
                         These opportunities have given me a well-rounded perspective 
@@ -192,7 +195,8 @@
         <div class="container">
             <div class="row text-center align-items-center">
                 <div class="col">
-                    <h1><strong>PROJECTS</strong></h1>
+                    <h3 class="section-title">Projects</h3>
+                    <div class="section-title-border"></div>
                     <p>
                         Here are the projects I've developed, 
                         each inspired by the motto "See a need, fill a need." 
@@ -205,11 +209,11 @@
             <div class="container">
                 <div class="row text-left align-items-center">
                     <div class="col-xs-12 col-lg-6">
-                        <img class="w-100" src="images/newgarden.jpg" alt="">
+                        <img class="img-fluid" src="images/newgarden.jpg" alt="">
                     </div>
                     <div class="col-xs-12 col-lg-6">
-                        <div class="title">New Garden</div>
-                        <div class="techstack">Java, PostgreSQL, Swing, MiGLayout</div>
+                        <div class="project-title">New Garden</div>
+                        <div class="project-techstack">Java, PostgreSQL, Swing, MiGLayout</div>
                         <p>
                             Created a Java Swing GUI, Point of Sale system that allows 
                             self-service for food ordering during the pandemic. 
@@ -217,7 +221,7 @@
                             retrieves the correct items based on the selected category.
                             It also counts the frequency of each item so restocking is easier.
                         </p>
-                        <button class="form" onclick=" window.open('https://github.com/johnnyj2608/NewGarden','_blank')">GitHub</button>
+                        <button class="btn" onclick=" window.open('https://github.com/johnnyj2608/NewGarden','_blank')">GitHub</button>
                     </div>
                 </div>
             </div>
@@ -226,11 +230,11 @@
             <div class="container">
                 <div class="row text-left align-items-center">
                     <div class="col-xs-12 col-lg-6">
-                        <img class="w-100" src="images/lootcouncil.jpg" alt="">
+                        <img class="img-fluid" src="images/lootcouncil.jpg" alt="">
                     </div>
                     <div class="col-xs-12 col-lg-6">
-                        <div class="title">Loot Council</div>
-                        <div class="techstack">Python, GraphQL, Pandas</div>
+                        <div class="project-title">Loot Council</div>
+                        <div class="project-techstack">Python, GraphQL, Pandas</div>
                         <p>
                             Developed a Python script to construct reward assignments for 
                             World of Warcraft guilds. It utilizes web scraping techniques 
@@ -238,7 +242,7 @@
                             Environment variables are used to safeguard API keys.
                             GitHub Actions will automatically run the script once a week.
                         </p>
-                        <button class="form" onclick=" window.open('https://github.com/johnnyj2608/LootCouncil','_blank')">GitHub</button>
+                        <button class="btn" onclick=" window.open('https://github.com/johnnyj2608/LootCouncil','_blank')">GitHub</button>
                     </div>
                 </div>
             </div>
@@ -247,11 +251,11 @@
             <div class="container">
                 <div class="row text-left align-items-center">
                     <div class="col-xs-12 col-lg-6">
-                        <img class="w-100" src="images/romantichut.jpg" alt="">
+                        <img class="img-fluid" src="images/romantichut.jpg" alt="">
                     </div>
                     <div class="col-xs-12 col-lg-6">
-                        <div class="title">Romantic Hut</div>
-                        <div class="techstack">HTML, CSS, Javascript</div>
+                        <div class="project-title">Romantic Hut</div>
+                        <div class="project-techstack">HTML, CSS, Javascript</div>
                         <p>
                             Designed a Bootstrap website to showcase the services of a party hall.
                             By filling out the embedded Google Form, you can receive an 
@@ -259,7 +263,7 @@
                             When submitted, Apps Script will look for schedule conflicts in 
                             the Google Sheet that hold all the reservations.
                         </p>
-                        <button class="form" onclick=" window.open('https://github.com/johnnyj2608/RomanticHut','_blank')">GitHub</button>
+                        <button class="btn" onclick=" window.open('https://github.com/johnnyj2608/RomanticHut','_blank')">GitHub</button>
                     </div>
                 </div>
             </div>
@@ -272,7 +276,8 @@
         <div class="container">
             <div class="row text-center align-items-center">
                 <div class="col">
-                    <h1><strong>CONTACT</strong></h1>
+                    <h3 class="section-title">Contact</h3>
+                    <div class="section-title-border"></div>
                 </div>
             </div>
             <div class="row text-left align-items-center">
