--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <project-title>Johnny Jiang</project-title>
+    <title>Johnny Jiang</title>
 
-    <!--Image Icon, JJ-->
+    <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 
@@ -132,7 +132,7 @@
                     <div class="section-title-border"></div>
                 </div>
             </div>
-            <div class="row text-center align-items-center">
+            <div class="row text-left align-items-center">
                 <div class="col-xs-12 col-sm-6">
                     <p>
                         <strong>Innovate</strong>
