landing image opacity

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
     <!--Landing Section-->
     <section class="main">
+        <img class="background-image" src="images/landing.jpg" alt="">
         <div class="container d-flex flex-column align-items-center justify-content-center h-100">
             <div class="row text-center align-items-center">
                 <div class="col">
@@ -111,9 +112,9 @@
                             </p>
                             <p>
                                 <strong>Misdemeanors:</strong>
-                                <br>- Says "I can't find you" when I actually just arrived
+                                <br>- Says "Close" the light instead of "Turn off" the light
                                 <br>- Doesn't know one single fact about bears attacks
-                                <br>- Ate all the orange slices in my HS basketball team
+                                <br>- Enjoys chewing bubble gum but can't blow bubbles
                                 <br>- Has a confusing one-word, all-lowercase WiFi password
                             </p>
                         </div>
@@ -132,6 +133,12 @@
                     <div class="section-title-border"></div>
                 </div>
             </div>
+            <div class="container">
+                
+            </div>
+
+
+
             <div class="row text-left align-items-center">
                 <div class="col-xs-12 col-sm-6">
                     <p>
@@ -213,7 +220,7 @@
                     </div>
                     <div class="col-xs-12 col-lg-6">
                         <div class="project-title">New Garden</div>
-                        <div class="project-techstack">Java, PostgreSQL, Swing, MiGLayout</div>
+                        <div class="project-desc">Restaurant Point of Sale System</div>
                         <p>
                             Created a Java Swing GUI, Point of Sale system that allows 
                             self-service for food ordering during the pandemic. 
@@ -234,7 +241,7 @@
                     </div>
                     <div class="col-xs-12 col-lg-6">
                         <div class="project-title">Loot Council</div>
-                        <div class="project-techstack">Python, GraphQL, Pandas</div>
+                        <div class="project-desc">Web Scraper & Reward Allocator</div>
                         <p>
                             Developed a Python script to construct reward assignments for 
                             World of Warcraft guilds. It utilizes web scraping techniques 
@@ -255,7 +262,7 @@
                     </div>
                     <div class="col-xs-12 col-lg-6">
                         <div class="project-title">Romantic Hut</div>
-                        <div class="project-techstack">HTML, CSS, Javascript</div>
+                        <div class="project-desc">Local Business Website</div>
                         <p>
                             Designed a Bootstrap website to showcase the services of a party hall.
                             By filling out the embedded Google Form, you can receive an 
