--- a/index.html
+++ b/index.html
@@ -133,40 +133,36 @@
                     <div class="section-title-border"></div>
                 </div>
             </div>
-            <div class="container">
-                
-            </div>
-
-
-
             <div class="row text-left align-items-center">
-                <div class="col-xs-12 col-sm-6">
+                <div class="col-sm-6">
                     <p>
+                        <i class="value-icon fas fa-lightbulb"></i>
                         <strong>Innovate</strong>
                         <br>Innovation is my driving force. 
                         I am dedicated to pushing boundaries and 
                         finding inventive solutions to challenges. 
                         I view every problem as a chance to craft something groundbreaking.
                     </p>
-                    </div>
-                    <div class="col-xs-12 col-sm-6">
+                    <br>
                     <p>
+                        <i class="value-icon fas fa-rocket"></i>
                         <strong>Challenge</strong>
                         <br>I am a passionate advocate for pushing my limits. 
                         Challenges invigorate me and fuel my desire to conquer new heights. 
                         I believe that the greatest growth comes from overcoming obstacles.
                     </p>
-                    </div>
-                    <div class="col-xs-12 col-sm-6">
+                </div>
+                <div class="col-sm-6">
                     <p>
+                        <i class="value-icon fas fa-users"></i>
                         <strong>Collaborate</strong>
                         <br>Collaboration is at the heart of my approach. 
                         I embrace the chance to team up with diverse minds, 
                         merging our ideas to create something greater than ourselves.
                     </p>
-                    </div>
-                    <div class="col-xs-12 col-sm-6">
+                    <br>
                     <p>
+                        <i class="value-icon fas fa-heart"></i>
                         <strong>Impact</strong>
                         <br>Impact is my ultimate goal. 
                         I channel my efforts into projects 
@@ -177,6 +173,7 @@
             </div>
         </div>
     </section>
+    
 
     <!--Exprience Section-->
     <section class="white">
